# neunet

./: Makefile  README.md  data.txt  test.py
base/src/: layer.cpp  main.cpp  network.cpp  neuron.cpp
network/src/: network.cpp
src/: Build.bat  CMakeLists.txt  Makefile  main.cpp
src/base/: dataload.py  model.py
src/dataset/: data.cpp  data.h
src/misc/: functions.cpp  functions.h
src/network/: layer.cpp  layer.h  net.cpp  net.h  neuron.cpp  neuron.h
src/optimizer/: utils.cpp
src/utils/: utils.cpp  utils.h
